# internal/dto/responses/major.go
@@ -3,5 +3,5 @@ package responses
 import "api/internal/dto"
 
 type GetAllMajors struct {
-	Majors []dto.Major `json:"majors"`
+	Majors []dto.Major `json:"majors" validate:"required"`
 }
