# internal/dto/responses/student.go
@@ -3,5 +3,5 @@ package responses
 import "api/internal/dto"
 
 type GetAllStudents struct {
-	Students []dto.Student `json:"students"`
+	Students []dto.Student `json:"students" validate:"required"`
 }
