# internal/handlers/major.go
@@ -17,8 +17,9 @@ func NewMajor(service *services.Major) *Major {
 
 // @ID			getAllMajors
 // @Tags		major
-// @Success	200	{object}	responses.GetAllMajors
-// @Router		/api/v1/major [get]
+// @Param		batch_id	path		int	true	"Batch ID"
+// @Success	200			{object}	responses.GetAllMajors
+// @Router		/api/v1/majors/batch/{batch_id} [get]
 func (h *Major) GetAll(c *gin.Context) {
 	batchId, err := strconv.ParseUint(c.Param("batch_id"), 10, 64)
 	if err != nil {
